--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bcryptjs": "^3.0.2",
     "next": "15.5.6",
     "next-auth": "^5.0.0-beta.29",
+    "openai": "^4.77.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^9.0.1",
     "recharts": "^3.3.0",
     "xlsx": "^0.18.5"
   },
